--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -1,1 +1,13 @@
+<head>
+<style>
+	input { display:block; }
+</style>
+</head>
+
 <h1>new page here</h1>
+
+<form action="" method="POST">
+	username: <input type="text" name="fname">
+	email:		<input type="text" name="email">
+	<input type="submit" value="submit">
+</form>
