--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -4,10 +4,19 @@
 </style>
 </head>
 
-<h1>new page here</h1>
+<h2>html form</h2>
 
-<form action="" method="POST">
-	username: <input type="text" name="fname">
-	email:		<input type="text" name="email">
+<form action="/users" method="post">
+	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
+	
+	<label for="username">username:</label>
+	<input type="text" 			name="username" id="username">
+	
+	<label for="email">email:</label>
+	<input type="text" 			name="email" 		id="email">
+	
+	<label for="password">password:</label>
+	<input type="password" 	name="password" id="password">
+	
 	<input type="submit" value="submit">
 </form>
