--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -10,13 +10,13 @@
 	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
 	
 	<label for="username">username:</label>
-	<input type="text" 			name="username" id="username">
+	<input type="text" 			name="user[username]" id="username">
 	
 	<label for="email">email:</label>
-	<input type="text" 			name="email" 		id="email">
+	<input type="text" 			name="user[email]" 		id="email">
 	
 	<label for="password">password:</label>
-	<input type="password" 	name="password" id="password">
+	<input type="password" 	name="user[password]" id="password">
 	
 	<input type="submit" value="submit">
 </form>
