--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -3,7 +3,23 @@
 </style></head>
 <h1>New here</h1>
 
+<h2>Railsy-er form with FORM_FOR</h2>
+
+<%= form_for @user do |u| %>
+	<%= u.label :username %>
+	<%= u.text_field :username %>
+
+	<%= u.label :email %>
+	<%= u.email_field :email %>
+
+	<%= u.label :password %>
+	<%= u.password_field :password %>
+
+	<%= u.submit "Submit" %>
+<% end %>
+
 <h2>Railsy form with FORM_TAG</h2>
+<p>(not using strong parameters, so it's not currently working)</p>
 <%= form_tag("/users", method:"post") do %>
 	<%= label_tag(:username, "Username") %>
 	<%= text_field_tag(:username) %>
@@ -21,13 +37,13 @@
 <form action="/users" method="post" accept-charset="UTF-8">
 	<input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
 	
-	<label for="username">Username:</label>
+	<label for="username">Username</label>
 	<input type="text" 	name="user[username]" id="username">
 	
-	<label for="email">Email:</label>
+	<label for="email">Email</label>
 	<input type="email"	name="user[email]" id="email">
 
-	<label for="password">Password:</label>
+	<label for="password">Password</label>
 	<input type="password" name="user[password]" id="password">
 
 	<input type="submit" value="submit">
