--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -3,6 +3,8 @@
 </style></head>
 <h1>New here</h1>
 
+<%= render partial: 'errors' %>
+
 <h2>Railsy-er form with FORM_FOR</h2>
 
 <%= form_for @user do |u| %>
