implement params[hash] and strong_parameters

--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -14,16 +14,17 @@
 
 	<label for="username">Username:</label> 							
 	<input 	type=	"text" 			
-					name=	"username"		
+					name=	"user[username]"		
 					id=		"username"
-					value="user1">
+					value="user4">
 
 	<label for="email">Email:</label>									
 	<input 	type=	"email" 		
-					name=	"email"			
+					name=	"user[email]"			
 					id=		"email"
-					value="user1@user.us">
+					value="user4@user.us">
 
+<!-- <div>	
 	<label for="password">Password:</label>
 	<input 	type=	"password"	
 					name=	"password"		
@@ -34,7 +35,8 @@
 	<input 	type=	"password"	
 					name=	"password_confirmation" 
 					id=		"password_confirmation"
-					value="foobar">	
+					value="foobar">
+</div> -->
 
 	<input type="submit" value="submit">
 </form>
