--- a/re-former/app/views/users/show.html.erb
+++ b/re-former/app/views/users/show.html.erb
@@ -27,4 +27,4 @@ th, td { border: 1px black solid; }
 </table>
 <br><br>
 <%= link_to "new user", new_user_path %>
-<%#= link_to "edit", edit_path %>
+<%= link_to "edit", edit_user_path(@user) %>
