--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -1,1 +1,24 @@
-<h1>NIU</h1>
+<head>
+	<style>
+		input { display: block; }
+	</style>
+</head>
+
+<h1>Many forms</h1>
+
+<p>starting from the</p>
+<h2>HTML form</h2>
+<form action="/users" method="post">
+	<input type="hidden" 		name="authenticity_token" value="<%= form_authenticity_token %>">
+	
+	<label  for="username">Username</label>
+	<input type="text" 			name="username",	id="username">
+
+	<label  for="email"		>Email</label>
+	<input type="email" 		name="email",			id="email">
+
+	<label  for="password">Password</label>
+	<input type="password" 	name="password", 	id="password">
+	
+	<input type="submit" 		value="Submit">
+</form>
