add Railsy-er form-for

--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -54,7 +54,7 @@
 </section>
 
 <section class="rails-form">
-	<h2>Railsy forms with #form_tag</h2>
+	<h2>Railsy form with #form_tag</h2>
 	<%= form_tag("/users", method: :post) do %>
 		<%= label_tag :username %>
 		<%= text_field_tag 'username' %>
@@ -66,5 +66,19 @@
 		<%= password_field_tag 'password' %>
 
 		<%= submit_tag("Submit") %>
+	<% end %>
+
+	<h2>Railsy-er form with #form_for</h2>
+	<%= form_for(@user) do |f| %>
+		<%= f.label :username %>
+		<%= f.text_field :username %>
+
+		<%= f.label :email %>
+		<%= f.email_field :email %>
+
+		<%= f.label :password %>
+		<%= f.password_field :password %>
+
+		<%= f.submit %>
 	<% end %>
 </section>
